@@ -26,10 +26,13 @@
 #' usage(barplot.default, width = 60)  # narrower output
 usage = function(FUN, width = getOption('width'), tidy = TRUE, output = TRUE) {
   fn = as.character(substitute(FUN))
-  res = capture.output(do.call(argsAnywhere, list(fn)))
+  res = capture.output(if (is.function(FUN)) args(FUN) else {
+    do.call(argsAnywhere, list(fn))
+  })
   if (identical(res, 'NULL')) return()
   res[1] = substring(res[1], 9)  # rm 'function ' in the beginning
   isS3 = FALSE
+  if (length(fn) == 3 && (fn[1] %in% c('::', ':::'))) fn = fn[3]
   if (grepl('.', fn, fixed = TRUE)) {
     n = length(parts <- strsplit(fn, '.', fixed = TRUE)[[1]])
     for (i in 2:n) {
